cabal-version:      2.4
name:               contract-test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Kirill Elizarov
maintainer:         kirillthetee@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
                 -fplugin-opt PlutusTx.Plugin:defer-errors

library
  hs-source-dirs:      src
  exposed-modules:     Contract.Oracle
                       Contract.Swap
                       Contract.Funds
                       Contract.Init
                       Backend.PAB.Handlers
                       Backend.Server
                       Backend.API
                       Backend.API.Init
                       Backend.API.Update
                       Backend.API.Swap
                       Backend.ContractStorage
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , plutus-pab
                     , prettyprinter
                     , text
                     , lens
                     , freer-simple
                     , servant
                     , servant-server
                     , stm
                     , warp
                     , bytestring
                     , mtl
                     , servant-client
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable start-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.14.1.0
                      , contract-test
                      , lobemo-backend-ekg
                      , iohk-monitoring
                      , plutus-pab
                      , monad-logger
                      , plutus-contract
                      , yaml
                      , 
    hs-source-dirs:   app
    default-language: Haskell2010
